--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ sub=raastech
 saltKey=raastech
 expirationTime=6
 
-spring.rest.authentication.name="JWT"
-spring.rest.authentication.jwt.iss="raastech"
-spring.rest.authentication.jwt.sub="raastech"
-spring.rest.authentication.jwt.saltKey="raastech"
+spring.rest.authentication.name=JWT
+spring.rest.authentication.jwt.iss=raastech
+spring.rest.authentication.jwt.sub=raastech
+spring.rest.authentication.jwt.saltKey=raastech
 spring.rest.authentication.jwt.exp=6
