Modification:Configure username and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,19 @@ sub=raastech
 saltKey=raastech
 expirationTime=6
 
+
+
 spring.rest.authentication.name=JWT
 spring.rest.authentication.jwt.iss=raastech
 spring.rest.authentication.jwt.sub=raastech
 spring.rest.authentication.jwt.saltKey=raastech
 spring.rest.authentication.jwt.exp=6
-#spring.rest.authentication.uuid.exp=6
+spring.rest.authentication.uuid.exp=6
 
-spring.rest.csrf.enable=true
-spring.rest.csrf.url=/api/csrf
+spring.security.rest.fully.authenticated.role=IS_FULLY_AUTHENTICATED
+
+spring.security.rest.csrf.enable=false
+spring.security.rest.csrf.url=/api/csrf
+
+spring.security.rest.username.key=user
+spring.security.rest.password.key=pass
