Modification:Added logout handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.security.rest.csrf.url=/api/csrf
 
 spring.security.rest.username.key=user
 spring.security.rest.password.key=pass
+spring.security.rest.auth.token.key=X-Auth-Token
+spring.security.rest.login.url=/api/login
+spring.security.rest.logout.session=false
