--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.security.rest.auth.token.key=X-Auth-Token
 spring.security.rest.login.url=/api/login
 spring.security.rest.logout.session=false
 spring.security.rest.csrf.exclude.urls=/api/user,/api/open
+
+spring.security.rest.password.encoder.algorithm=BCrypt
