Modification:Refactor code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.security.rest.password.key=pass
 spring.security.rest.auth.token.key=X-Auth-Token
 spring.security.rest.login.url=/api/login
 spring.security.rest.logout.url=/api/logout
-spring.security.rest.logout.session=true
+spring.security.rest.logout.session=false
 spring.security.rest.csrf.exclude.urls=/api/user,/api/open
 
 spring.security.rest.password.encoder.algorithm=BCrypt
