Modification:Added exclude authentication urls property.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ spring.security.rest.auth.token.key=X-Auth-Token
 spring.security.rest.login.url=/api/login
 spring.security.rest.logout.url=/api/logout
 spring.security.rest.logout.session=false
-spring.security.rest.csrf.exclude.urls=/api/user,/api/open
+spring.security.rest.csrf.exclude.urls=/api/user,/api/register
 
 spring.security.rest.password.encoder.algorithm=BCrypt
+
+spring.security.rest.authentication.exclude.urls=/api/register
