--- a/Spring-security-REST/build.gradle
+++ b/Spring-security-REST/build.gradle
@@ -15,16 +15,25 @@ configurations {
 
 sourceSets.main.compileClasspath += configurations.providedCompile
 
+configurations.all {
+    exclude group: "commons-logging", module: "commons-logging"
+}
+
 dependencies {
     compile group: 'org.springframework', name: 'spring-core', version: '4.0.0.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '4.0.0.RELEASE'
+    compile(group: 'org.springframework', name: 'spring-context', version: '4.0.0.RELEASE')
     compile group: 'com.google.code.gson', name: 'gson', version: '2.2.2'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.0.0.RELEASE'
     compile group: 'org.springframework', name: 'spring-web', version: '4.0.0.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-web', version: '3.2.3.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-config', version: '3.2.3.RELEASE'
+//    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.2'
+
+    compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.7'
+    compile group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.7'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.7'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.2.3'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.4'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
